[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["3madov-77 <emadzxy7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = {version = "^3.1.1", allow-prereleases = true}
djangorestframework = {version = "^3.12.1", allow-prereleases = true}
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
